# pinyin-font

./: .gitignore  CMakeLists.txt  README.md
cli/: pinyinfont.cpp
openspec/changes/add-project-license-notice/: design.md  proposal.md  tasks.md
openspec/changes/add-project-license-notice/specs/project-licensing/: spec.md
openspec/changes/archive/2026-07-05-add-font-preview-page/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-05-add-font-preview-page/specs/font-preview/: spec.md
openspec/changes/archive/2026-07-05-restructure-project-layout/: design.md  proposal.md
openspec/changes/archive/2026-07-05-simplify-cli-and-tools/: design.md  proposal.md
openspec/changes/archive/2026-07-05-simplify-cli-and-tools/specs/project-layout/: spec.md
openspec/changes/archive/2026-07-06-preserve-generated-font-metrics/: design.md
openspec/changes/archive/2026-07-06-preserve-generated-font-metrics/specs/generated-font-integrity/: spec.md
openspec/changes/preserve-generated-font-metrics/: proposal.md  tasks.md
openspec/changes/preserve-generated-font-metrics/specs/project-layout/: spec.md
openspec/changes/restructure-project-layout/: tasks.md
openspec/changes/restructure-project-layout/specs/project-layout/: spec.md
openspec/changes/simplify-cli-and-tools/: tasks.md
openspec/specs/font-preview/: spec.md
openspec/specs/generated-font-integrity/: spec.md
openspec/specs/project-layout/: spec.md
openspec/specs/project-licensing/: spec.md
source/: ot_cmap.h  ot_cmap_format0.cpp  ot_cmap_format12.cpp  ot_cmap_format4.cpp  ot_cmap_format6.cpp  ot_font.cpp  ot_font.h  ot_font_parser.cpp  ot_font_parser.h  ot_font_writer.cpp  ot_font_writer.h  pinyin_db.cpp  pinyin_db.h  pinyin_font_builder.cpp  pinyin_font_builder.h  status.h  test.cpp  utility.h
src/opentype/: mac_glyph_names.cpp  mac_glyph_names.h  ot_cmap_format12.cpp  ot_cmap_format6.cpp  ot_font.cpp  ot_font.h  ot_font_parser.cpp  ot_font_parser.h
src/pinyin/: pinyin_db.cpp  pinyin_db.h
src/synthesis/: pinyin_font_builder.cpp  pinyin_font_builder.h
tests/: pinyin_db_smoke.cpp
tools/: font_table_dump.cpp  font_table_tool.cpp  font_tool.cpp  preview.html
